# openai-fine-tuning-validate

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/openai_fine_tuning_validate/: __init__.py
tests/: test_openai_fine_tuning_validate.py
tests/data/: dataset-2-multi-turn.jsonl
